[tool.poetry]
name = "railway-langchain-runnables"
version = "0.1.0"
description = ""
authors = ["Taqi Jaffri <tjaffri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
langserve = "*"
langchain = "*"
langchain-openai = "*"
sse-starlette = "*"
pydantic = "1.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"