[tool.poetry]
name = "cloud-langchain-runnables"
version = "0.1.1"
description = ""
authors = ["Taqi Jaffri <tjaffri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
langserve = "*"
langgraph = "*"
langchain = "*"
langchain-openai = "*"
sse-starlette = "*"
pydantic = "1.*"

[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.1.52"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"